WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90703
WebKit Version 5.1.7 (6534.57.2,
r121935
): Double-click no longer works on OpenStreetMap
https://bugs.webkit.org/show_bug.cgi?id=90703
Summary
WebKit Version 5.1.7 (6534.57.2, r121935): Double-click no longer works on Op...
lars.sonchocky-helldorf
Reported
2012-07-06 14:02:49 PDT
When Browsing OpenStreetMap () with WebKit Version 5.1.7 (6534.57.2,
r121952
) I am seeing a strange behaviour: - When opening the site the same section of the map like in the last session is shown – this is expected. - Now I zoomed out using the control in the upper left corner on the map and dragged the map to another location. - When I am now trying to zoom in using a double click at some point at the map the section of the map jumps back to the same location as the session started. - I can zoom in properly using the control on the map but not by using double clicks. - I deleted all cookies but the problem remains (and it seems that the cookies never got really deleted). - Other Browser, including vanilla Safari work as expected (zoom in by double click) - there is no component "cookies" to choose for this bug so I've chosen "new bugs"
Attachments
the patch
(26.01 KB, patch)
2012-07-06 17:34 PDT
,
Filip Pizlo
msaboff
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
lars.sonchocky-helldorf
Comment 1
2012-07-06 14:30:15 PDT
WebKit-SVN-
r121911
: works WebKit-SVN-
r121935
: broken
Simon Fraser (smfr)
Comment 2
2012-07-06 14:43:38 PDT
I crash at 0 com.apple.JavaScriptCore 0x000000010c891a23 JSC::JSObject::put(JSC::JSCell*, JSC::ExecState*, JSC::PropertyName, JSC::JSValue, JSC::PutPropertySlot&) + 355 1 com.apple.JavaScriptCore 0x000000010c75badc cti_op_put_by_val + 652 2 ??? 0x000000010e58896a 0 + 4535650666 3 com.apple.JavaScriptCore 0x000000010c72c331 JSC::Interpreter::executeCall(JSC::ExecState*, JSC::JSObject*, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) + 913 every time I click in
r121935
Filip Pizlo
Comment 3
2012-07-06 17:10:25 PDT
Oh wow, that's a dumb bug. I can't believe this got past our tests. Patch with layout test on the way...
Filip Pizlo
Comment 4
2012-07-06 17:34:45 PDT
Created
attachment 151125
[details]
the patch
Michael Saboff
Comment 5
2012-07-06 17:41:45 PDT
Comment on
attachment 151125
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=151125&action=review
> LayoutTests/fast/js/jsc-test-list:189 > +fast/js/get-by-pname
Add fast/js/get-by-pname-non-final-object
Filip Pizlo
Comment 6
2012-07-06 17:43:56 PDT
Landed in
http://trac.webkit.org/changeset/122047
lars.sonchocky-helldorf
Comment 7
2012-07-08 06:54:18 PDT
Thanks for the quick fix, guys!
Csaba Osztrogonác
Comment 8
2012-07-09 03:23:40 PDT
***
Bug 90664
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug