WebKit Version 5.1.7 (6534.57.2, r121935): Double-click no longer works on OpenStreetMap https://bugs.webkit.org/show_bug.cgi?id=90703

Source/JavaScriptCore:

Reviewed by Michael Saboff.

It turns out that in my object model refactoring, I managed to fix get_by_pname in all
execution engines except 64-bit baseline JIT.

* jit/JITPropertyAccess.cpp:
(JSC::JIT::emit_op_get_by_pname):

LayoutTests:

Reviewed by Michael Saboff.

* fast/js/get-by-pname-expected.txt: Added.
* fast/js/get-by-pname-non-final-object-expected.txt: Added.
* fast/js/get-by-pname-non-final-object.html: Added.
* fast/js/get-by-pname.html: Added.
* fast/js/jsc-test-list:
* fast/js/script-tests/get-by-pname-non-final-object.js: Added.
(foo):
* fast/js/script-tests/get-by-pname.js: Added.
(foo):



Canonical link: https://commits.webkit.org/108559@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122047 268f45cc-cd09-0410-ab3c-d52691b4dbfc